--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から英会話を習わせたい方や定期テストや高校受験に向けて学力を向上させたい中学生の方、小学生から大人までの習字を習いたい・綺麗な字を書けるようになりたい方におすすめの英会話教室・学習塾・書道教室を行なっています。阪堺線「石津」駅から徒歩５分の英会話教室・学習塾、南海線「湊」駅から徒歩５分の書道教室。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
     <meta name="keywords" content="石津,石津川,堺,堺市西区,浜寺,大浜,湊,大阪,英会話,英検・英検対策,習字,書道,集団塾・個別指導・学習塾・進学塾・志望校対策・受験対策,小学生,中学生,大人,社会人,おすすめ">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="photo/icon.png">
+    <link rel="icon" href="photo/logo.png">
     <title> 堺市の英会話教室・書道教室・学習塾なら咲Kids教室|JIRITSULABO 咲Kids教室</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
