--- a/shogaku.html
+++ b/shogaku.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="shogaku.css">
-    <link rel="icon" href="photo/icon.png">
+    <link rel="icon" href="photo/logo.png">
     <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から英会話を習わせたい方におすすめの英会話教室です。阪堺線「石津」駅 徒歩5分の英会話教室。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
     <meta name="keywords" content="石津,堺,石津川,大阪,英会話,英会話教室,英検,英検対策,学習塾,小学生">
     <title>堺市で小学生から英会話を始めるなら咲Kids教室|JIRITSU LABO 咲Kids教室</title>
