画像の追加とドロップダウンメニューの修正

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <a href="#can" class="cantitle">クラス紹介</a>
                     <!-- ドロップダウンメニュー -->
                     <ul class="can">
+                        <li><a href="#can">クラス紹介</a></li>
                         <li class="headmenu">
                             <a href="shogaku.html">小学生クラス</a>
                         </li>
@@ -91,7 +92,7 @@
         <div class="slogandiv">
             <div class="slide">
                 <img src="photo/shogaku1.JPG" alt="小学生">
-                <img src="photo/chugaku2.jpeg" alt="中学生">
+                <img src="photo/chugaku1.jpeg" alt="中学生">
                 <img src="photo/shodo1.JPG" alt="書道">
             </div>
             <h2 class="slogan">英語・英会話&#x2613;書道を通して<br><span>人間力</span>を育てる</h2>
@@ -129,7 +130,7 @@
                 <a href="chugaku.html">
                     <div>
                         <div class="classdiv">
-                            <img src="photo/chugaku7.jpeg" alt="中学生">
+                            <img src="photo/chugaku1.jpeg" alt="中学生">
                         </div>
                         <div class="classdiv2">
                             <h3>中学生クラス</h3>
@@ -154,15 +155,7 @@
         </section>
         <section class="scenery">
             <h2 id="reputation">授業・イベント風景</h2>
-            <img src="photo/shodo.jpg" alt="lesson">
             <img src="photo/shogaku1.JPG" alt="lesson">
-            <img src="photo/chugaku3.jpeg" alt="lesson">
-            <img src="photo/event1.jpg" alt="lesson">
-            <img src="photo/event2.jpg" alt="lesson">
-            <img src="photo/event3.jpg" alt="lesson">
-            <img src="photo/shogaku3.JPG" alt="lesson">
-            <img src="photo/event6.jpg" alt="lesson">
-            <img src="photo/chugaku6.jpeg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
