代表挨拶欄の作成と画像追加

--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="#reputation">授業・イベント風景</a>
+                    <a href="#reputation">Lesson風景</a>
                 </li>
                 <li class="headmenu">
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="headmenu">
-                    <a href="#contact">お問い合わせ・アクセス</a>
+                    <a href="#greeting">代表挨拶</a>
+                </li>
+                <li class="headmenu">
+                    <a href="#contact">お問い合わせ</a>
                 </li>
                 <li>
                     <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a>
@@ -75,13 +78,16 @@
                         <a href="shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="#reputation">授業・イベント風景</a>
+                        <a href="#reputation">Lesson風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
                     </li>
                     <li class="head-menu">
-                        <a href="#contact">お問い合わせ・アクセス</a>
+                        <a href="#greeting">代表挨拶</a>
+                    </li>
+                    <li class="head-menu">
+                        <a href="#contact">お問い合わせ</a>
                     </li>
                 </ul>
             </div>
@@ -154,7 +160,7 @@
             </div>
         </section>
         <section class="scenery">
-            <h2 id="reputation">授業・イベント風景</h2>
+            <h2 id="reputation">Lesson風景</h2>
             <img src="photo/shogaku1.JPG" alt="lesson">
         </section>
         <section class="achievement">
@@ -171,8 +177,32 @@
                     社会人は3段で教育部の指導者の免状が授与されます。</p>
             </div>
         </section>
+        <section id="greeting">
+            <h2>代表挨拶</h2>
+            <div class="greeting">
+                <div>
+                    <img src="photo/teacher.JPG" alt="教室長">
+                    <p>代表プロフィール</p>
+                    <p>崎原かおる</p>
+                    <p>大阪府堺市出身</p>
+                    <p>カナダトロントの語学学校を経て現地の専門学校でビジネスを学び、卒業後帰国。その後子育てしながら英会話教室の講師を8年経験した後に独自のカリキュラムで英語を通して逞しい人に育てられる教室を作りたいと強く思うようになり「JIRITSU LABO 咲Kids教室」を設立。好きな英語を続けながら書道では32歳で「師範」を取得。地域の「ふとん太鼓」台の町章なども手がける。</p>
+                </div>
+                <div>
+                    <h4>代表挨拶</h4>
+                    <p>ホームページをご覧頂きありがとうございます。</p>
+                    <p>私は子供が大好きで、この仕事を始めました。</p>
+
+                    <p>この教室は「咲kids」の名の通り、子供達がどんな世の中や状況になっても自ら花を咲かせるように逞しく育って欲しいという願いからつけました。</p>
+                    <p>子供達はたくさんの人の愛情に触れることで豊かに真っ直ぐ育ちます。そのため私は我が子のように愛情を持って子供達と接しています。</p>
+
+                    <p>今はだれもが英語を学ぶ時代です。しかし英語はあくまで生きていく上で必要なツールにすぎません。英語を学ぶことを目標とせず、その先の子供達の未来を見据えて今何が必要か？　書道では綺麗な字を書くこと以外に何が得られるのか？　そんなことを常に考えながら楽しく元気にレッスンを行い、子供達が帰る頃には来た時よりも笑顔で元気に帰れるような、そんな教室を心掛けています。</p>
+
+                    <p>英語も書道も第一に「継続力」です。継続して初めて身につくものです。出来ることをどんどん増やせる場を目指して進化し続けていきます。</p>
+                </div>
+            </div>
+        </section>
         <section>
-            <h2 id="contact">お問い合わせ・アクセス</h2>
+            <h2 id="contact">お問い合わせ</h2>
             <div class="inline">
                 <div class="contact">
                     <dl class="phonenumber">
@@ -220,13 +250,16 @@
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="#reputation">授業・イベント風景</a>
+                    <a href="#reputation">Lesson風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="footmenu">
-                    <a href="#contact">お問い合わせ・アクセス</a>
+                    <a href="#greeting">代表挨拶</a>
+                </li>
+                <li class="footmenu">
+                    <a href="#contact">お問い合わせ</a>
                 </li>
             </ul>
         </nav>
