ファイル階層修正

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                     <ul class="can">
                         <li><a href="#can">クラス紹介</a></li>
                         <li class="headmenu">
-                            <a href="shogaku.html">小学生クラス</a>
+                            <a href="/shogaku/shogaku.html">小学生クラス</a>
                         </li>
                         <li class="headmenu">
-                            <a href="chugaku.html">中学生クラス</a>
+                            <a href="/chugaku/chugaku.html">中学生クラス</a>
                         </li>
                         <li class="headmenu">
-                            <a href="shodo.html">書道クラス</a>
+                            <a href="/shodo/shodo.html">書道クラス</a>
                         </li>
                     </ul>
                 </li>
@@ -69,13 +69,13 @@
                         <a href="#introduction">教室理念</a>
                     </li>
                     <li class="head-menu">
-                        <a href="shogaku.html">小学生クラス</a>
+                        <a href="/shogaku/shogaku.html">小学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="chugaku.html">中学生クラス</a>
+                        <a href="/chugaku/chugaku.html">中学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="shodo.html">書道クラス</a>
+                        <a href="/shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
                         <a href="#reputation">Lesson風景</a>
@@ -121,7 +121,7 @@
         <section>
             <h2 id="can">クラス紹介</h2>
             <div class="class">
-                <a href="shogaku.html">
+                <a href="/shogaku/shogaku.html">
                     <div>
                         <div class="classdiv">
                             <img src="photo/shogaku1.JPG" alt="小学生">
@@ -133,7 +133,7 @@
                     </div>
                     <p class="link">小学生ページはこちらから</p>
                 </a>
-                <a href="chugaku.html">
+                <a href="/chugaku/chugaku.html">
                     <div>
                         <div class="classdiv">
                             <img src="photo/chugaku1.jpeg" alt="中学生">
@@ -145,7 +145,7 @@
                     </div>
                     <p class="link">中学生ページはこちらから</p>
                 </a>
-                <a href="shodo.html">
+                <a href="/shodo/shodo.html">
                     <div>
                         <div class="classdiv">
                             <img src="photo/shodo1.JPG" alt="書道">
@@ -239,13 +239,13 @@
             </ul>
             <ul class="classnav">
                 <li class="footmenu">
-                    <a href="shogaku.html">小学生クラス<span class="slash">/</span></a>
+                    <a href="/shogaku/shogaku.html">小学生クラス<span class="slash">/</span></a>
                 </li>
                 <li class="footmenu">
-                    <a href="chugaku.html">中学生クラス<span class="slash">/</span></a>
+                    <a href="/chugaku/chugaku.html">中学生クラス<span class="slash">/</span></a>
                 </li>
                 <li class="footmenu">
-                    <a href="shodo.html">書道クラス</a>
+                    <a href="/shodo/shodo.html">書道クラス</a>
                 </li>
             </ul>
             <ul>
