--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="shodo.css">
-    <link rel="icon" href="photo/logo.png">
+    <link rel="icon" href="/photo/logo.png">
     <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から大人までの習字を習いたい・綺麗な字を書けるようになりたい方におすすめの堺市西区にある書道教室です。南海本線「湊」駅 徒歩5分の書道教室。堺市堺区出島町2-6-1 湊団地自治会館。堺市西区浜寺石津町東3-4-19">
     <meta name="keywords" content="湊,堺,堺市,堺市堺区,堺市西区,出島町,大浜,大阪,習字,書道,書道教室,毛筆,硬筆,小学生,中学生,高校生,大人,社会人,おすすめ">
     <title>書道クラス|堺市の書道教室ならJIRITSU LABO 咲Kids教室</title>
@@ -14,12 +14,12 @@
 <body>
     <header>
         <h1>
-            <img src="photo/shodologo.png" alt="JIRITU LABO 咲Kids教室">
+            <img src="/photo/shodologo.png" alt="JIRITU LABO 咲Kids教室">
         </h1>
         <nav class="headnav">
             <ul class="dropdown">
                 <li class="headmenu">
-                    <a href="index.html">ホーム</a>
+                    <a href="/index.html">ホーム</a>
                 </li>
                 <li class="headmenu">
                     <a href="#lesson">レッスン内容</a>
@@ -28,21 +28,24 @@
                     <a class="cantitle">他のクラス</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="shogaku.html">小学生クラス</a>
+                            <a href="/shogaku/shogaku.html">小学生クラス</a>
                         </li>
                         <li class="headmenu">
-                            <a href="chugaku.html">中学生クラス</a>
+                            <a href="/chugaku/chugaku.html">中学生クラス</a>
                         </li>
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="index.html#reputation">授業風景</a>
+                    <a href="/index.html#reputation">授業風景</a>
                 </li>
                 <li class="headmenu">
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="headmenu">
-                    <a href="#contact">お問い合わせ・アクセス</a>
+                    <a href="/index.html#greeting">代表挨拶</a>
+                </li>
+                <li class="headmenu">
+                    <a href="#contact">お問い合わせ</a>
                 </li>
                 <li>
                     <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a>
@@ -60,25 +63,28 @@
             <div class="menu">
                 <ul class="headmenu-list">
                     <li class="head-menu">
-                        <a href="index.html">ホーム</a>
+                        <a href="/index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
                         <a href="#lesson">レッスン内容</a>
                     </li>
                     <li class="head-menu">
-                        <a href="shogaku.html">小学生クラス</a>
+                        <a href="/shogaku/shogaku.html">小学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="chugaku.html">中学生クラス</a>
+                        <a href="/chugaku/chugaku.html">中学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="index.html#reputation">授業風景</a>
+                        <a href="/index.html#reputation">授業風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
                     </li>
                     <li class="head-menu">
-                        <a href="#contact">お問い合わせ・アクセス</a>
+                        <a href="/index.html#greeting">代表挨拶</a>
+                    </li>
+                    <li class="head-menu">
+                        <a href="#contact">お問い合わせ</a>
                     </li>
                 </ul>
             </div>
@@ -87,7 +93,7 @@
     <main>
         <!-- キャッチコピー -->
         <div class="slogandiv">
-            <img src="photo/shodo.jpg">
+            <img src="/photo/shodo.jpg">
             <h2 class="slogan">英語・英会話&#x2613;書道を通して<br><span>人間力</span>を育てる</h2>
         </div>
         <section>
@@ -103,11 +109,11 @@
             </div>
         </section>
         <section>
-            <h2 id="contact">お問い合わせ・アクセス</h2>
+            <h2 id="contact">お問い合わせ</h2>
             <div class="inline">
                 <div class="contact">
                     <dl class="phonenumber">
-                        <dd><img src="photo/phone.svg" alt="電話番号"></dd>
+                        <dd><img src="/photo/phone.svg" alt="電話番号"></dd>
                         <dt>090 - 3866 - 8049</dt>
                     </dl>
                     <div class="LINE">
@@ -115,7 +121,7 @@
                         <p>下記のQRコードからお気軽にご連絡ください。</p>
                         <p class="tap">(読み取れない場合はタップしてください）</p>
                         <a href="https://line.me/ti/p/wg7LPOKn9I">
-                            <img src="photo/LINE.jpg" alt="LINE">
+                            <img src="/photo/LINE.jpg" alt="LINE">
                         </a>
                     </div>
                     <dl class="adress">
@@ -138,7 +144,7 @@
         <nav>
             <ul>
                 <li class="footmenu">
-                    <a href="index.html">ホーム</a>
+                    <a href="/index.html">ホーム</a>
                 </li>
                 <li class="footmenu">
                     <a href="#lesson">レッスン内容</a>
@@ -146,26 +152,29 @@
             </ul>
             <ul class="classnav">
                 <li class="footmenu">
-                    <a href="shogaku.html">小学生クラス/</a>
+                    <a href="/shogaku/shogaku.html">小学生クラス/</a>
                 </li>
                 <li class="footmenu">
-                    <a href="chugaku.html">中学生クラス</a>
+                    <a href="/chugaku/chugaku.html">中学生クラス</a>
                 </li>
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="index.html#reputation">授業風景</a>
+                    <a href="/index.html#reputation">授業風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="footmenu">
-                    <a href="#contact">お問い合わせ・アクセス</a>
+                    <a href="/index.html#greeting">代表挨拶</a>
+                </li>
+                <li class="footmenu">
+                    <a href="#contact">お問い合わせ</a>
                 </li>
             </ul>
         </nav>
         <small>&copy;2022 咲Kids教室</small>
     </footer>
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
