--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -4,45 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="chugaku.css">
-    <link rel="icon" href="photo/logo.png">
-    <meta name="description" content="JIRITSU LABO 咲Kids教室は定期テストや高校受験に向けて学力を向上させたい中学生の方におすすめの集団・個別の学習塾です。阪堺線「石津」駅 徒歩5分の学習塾。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
-    <meta name="keywords" content="石津,堺,石津川,湊,浜寺,大浜,大阪,集団塾・個別指導塾・学習塾・進学塾・志望校対策・高校受験対策,中学生">
-    <title>堺市の学習塾なら咲Kids教室|JIRITSU LABO 咲Kids教室</title>
+    <link rel="stylesheet" href="shogaku.css">
+    <link rel="icon" href="/photo/logo.png">
+    <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から英会話を習わせたい方におすすめの英会話教室です。阪堺線「石津」駅 徒歩5分の英会話教室。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
+    <meta name="keywords" content="石津,堺,石津川,大阪,英会話,英会話教室,英検,英検対策,学習塾,小学生">
+    <title>堺市で小学生から英会話を始めるなら咲Kids教室|JIRITSU LABO 咲Kids教室</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>
-            <img src="photo/chugakulogo.png" alt="JIRITU LABO 咲Kids教室">
+            <img src="/photo/shogakulogo.png" alt="JIRITU LABO 咲Kids教室">
         </h1>
         <nav class="headnav">
             <ul class="dropdown">
                 <li class="headmenu">
-                    <a href="index.html">ホーム</a>
+                    <a href="/index.html">ホーム</a>
                 </li>
                 <li class="headmenu">
-                    <a href="#lesson">レッスン内容</a>
+                    <a href="#lesson">Lesson内容</a>
                 </li>
                 <li class="headmenu">
                     <p class="cantitle">他のクラス</p>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="shogaku.html">小学生クラス</a>
+                            <a href="/chugaku/chugaku.html">中学生クラス</a>
                         </li>
                         <li class="headmenu">
-                            <a href="shodo.html">書道クラス</a>
+                            <a href="/shodo/shodo.html">書道クラス</a>
                         </li>
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="index.html#reputation">授業風景</a>
+                    <a href="/index.html#reputation">授業風景</a>
                 </li>
                 <li class="headmenu">
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="headmenu">
-                    <a href="#contact">お問い合わせ・アクセス</a>
+                    <a href="/index.html#greeting">代表挨拶</a>
+                </li>
+                <li class="headmenu">
+                    <a href="#contact">お問い合わせ</a>
                 </li>
                 <li>
                     <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a>
@@ -60,40 +63,53 @@
             <div class="menu">
                 <ul class="headmenu-list">
                     <li class="head-menu">
-                        <a href="index.html">ホーム</a>
+                        <a href="/index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
-                        <a href="#lesson">レッスン内容</a>
+                        <a href="#lesson">Lesson内容</a>
                     </li>
                     <li class="head-menu">
-                        <a href="shogaku.html">小学生クラス</a>
+                        <a href="/chugaku/chugaku.html">中学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="shodo.html">書道クラス</a>
+                        <a href="/shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="index.html#reputation">授業風景</a>
+                        <a href="/index.html#reputation">授業風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
                     </li>
                     <li class="head-menu">
-                        <a href="#contact">お問い合わせ・アクセス</a>
+                        <a href="/index.html#greeting">代表挨拶</a>
+                    </li>
+                    <li class="head-menu">
+                        <a href="#contact">お問い合わせ</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
-        <!-- キャッチコピー -->
         <div class="slogandiv">
-            <img src="photo/chugaku1.jpeg">
-            <h2 class="slogan">
-                英語を通して<span>人間力</span>を育てる
-            </h2>
+            <img src="/photo/shogaku1.JPG" alt="小学生">
+            <h2 class="slogan">英語を通して<span>人間力</span>を育てる</h2>
         </div>
         <section>
-            <h2 id="lesson">レッスン内容</h2>
+            <h2 id="lesson">Lesson内容</h2>
+            <div class="lesson">
+                <p><span>レベルに合わせてのクラス編成</span></p>
+                <p><span>元気に楽しく積極性を最優先にレッスン！</span></p>
+                <p>○１年〜３年まで６０分</p>
+                <p>○４年〜６年まで９０分</p>
+                <p>
+                    自分で目標を立て、アルファベットや単語を覚えていきます。
+                    ４年生以上は「<strong>外国人講師とオンラインレッスン</strong>」を月１回30分してます。
+                    トピックを決め、それについて意見を出し理由まで英語で言えるように指導していきます。
+                    またレベルに合わせて「英作文」「読解」などの問題集にも挑戦してもらったり、英検にも励んでもらってます。
+                    リスニングはCDからだけでなく、海外の漫画を見てネイティブの会話のスピードや表現にも触れてもらいます。
+                </p>
+            </div>
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
@@ -104,11 +120,11 @@
             </div>
         </section>
         <section>
-            <h2 id="contact">お問い合わせ・アクセス</h2>
+            <h2 id="contact">お問い合わせ</h2>
             <div class="inline">
                 <div class="contact">
                     <dl class="phonenumber">
-                        <dd><img src="photo/phone.svg" alt="電話番号"></dd>
+                        <dd><img src="/photo/phone.svg" alt="電話番号"></dd>
                         <dt>090 - 3866 - 8049</dt>
                     </dl>
                     <div class="LINE">
@@ -116,7 +132,7 @@
                         <p>下記のQRコードからお気軽にご連絡ください。</p>
                         <p class="tap">(読み取れない場合はタップしてください）</p>
                         <a href="https://line.me/ti/p/wg7LPOKn9I">
-                            <img src="photo/LINE.jpg" alt="LINE">
+                            <img src="/photo/LINE.jpg" alt="LINE">
                         </a>
                     </div>
                     <dl class="adress">
@@ -133,34 +149,37 @@
         <nav>
             <ul>
                 <li class="footmenu">
-                    <a href="index.html">ホーム</a>
+                    <a href="/index.html">ホーム</a>
                 </li>
                 <li class="footmenu">
-                    <a href="#lesson">レッスン内容</a>
+                    <a href="#lesson">Lesson内容</a>
                 </li>
             </ul>
             <ul class="classnav">
                 <li class="footmenu">
-                    <a href="shogaku.html">小学生クラス/</a>
+                    <a href="/chugaku/chugaku.html">中学生クラス/</a>
                 </li>
                 <li class="footmenu">
-                    <a href="shodo.html">書道クラス</a>
+                    <a href="/shodo/shodo.html">書道クラス</a>
                 </li>
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="index.html#reputation">授業風景</a>
+                    <a href="/index.html#reputation">授業風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="footmenu">
-                    <a href="#contact">お問い合わせ・アクセス</a>
+                    <a href="/index.html#greeting">代表挨拶</a>
+                </li>
+                <li class="footmenu">
+                    <a href="#contact">お問い合わせ</a>
                 </li>
             </ul>
         </nav>
-        <small>&copy;2022 咲Kids教室</small>   
+        <small>&copy;2022 咲Kids教室</small>
     </footer>
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
