レッスン内容の追加

--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -104,10 +104,10 @@
                 <p>○４年〜６年まで９０分</p>
                 <p>
                     自分で目標を立て、アルファベットや単語を覚えていきます。
-                    ４年生以上は「<strong>外国人講師とオンラインレッスン</strong>」を月１回30分してます。
+                    ４年生以上は「<strong>外国人講師とオンラインレッスン</strong>」を月1回30分してます。
                     トピックを決め、それについて意見を出し理由まで英語で言えるように指導していきます。
-                    またレベルに合わせて「英作文」「読解」などの問題集にも挑戦してもらったり、英検にも励んでもらってます。
-                    リスニングはCDからだけでなく、海外の漫画を見てネイティブの会話のスピードや表現にも触れてもらいます。
+                    またレベルに合わせて「<strong>英作文</strong>」「<strong>読解</strong>」などの問題集にも挑戦してもらったり、<strong>英検</strong>にも励んでもらってます。
+                    リスニングはCDからだけでなく、<strong>海外の漫画</strong>を見てネイティブの会話のスピードや表現にも触れてもらいます。
                 </p>
             </div>
         </section>
