レッスン内容のレスポンシブ対応

--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -95,9 +95,9 @@
             <img src="/photo/shogaku1.JPG" alt="小学生">
             <h2 class="slogan">英語を通して<span>人間力</span>を育てる</h2>
         </div>
-        <section>
+        <section class="lesson">
             <h2 id="lesson">Lesson内容</h2>
-            <div class="lesson">
+            <div>
                 <p><span>レベルに合わせてのクラス編成</span></p>
                 <p><span>元気に楽しく積極性を最優先にレッスン！</span></p>
                 <p>○１年〜３年まで６０分</p>
