申し込みフォーム追加

--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="/index.html#reputation">授業風景</a>
+                    <a href="/index.html#reputation">Lesson風景</a>
                 </li>
                 <li class="headmenu">
                     <a href="#achievement">資格</a>
@@ -56,7 +56,7 @@
         <nav class="burger">
             <ul class="dropdown">
                 <li>
-                    <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">入塾申し込み</a>
+                    <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a>
                 </li>
             </ul>
             <div class="burgermenu"></div>
@@ -75,7 +75,7 @@
                         <a href="/shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/index.html#reputation">授業風景</a>
+                        <a href="/index.html#reputation">Lesson風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
@@ -129,6 +129,7 @@
                         <dd><img src="/photo/phone.svg" alt="電話番号"></dd>
                         <dt>090 - 3866 - 8049</dt>
                     </dl>
+                    <div class="formdiv"><a class="form_main" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a></div>
                     <div class="LINE">
                         <p>LINEでのお問い合わせも受け付けております。</p>
                         <p>下記のQRコードからお気軽にご連絡ください。</p>
@@ -167,7 +168,7 @@
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="/index.html#reputation">授業風景</a>
+                    <a href="/index.html#reputation">Lesson風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
