--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <nav class="burger">          
             <ul class="dropdown">
                 <li>
-                    <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">入塾申し込み</a>
+                    <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a>
                 </li>
             </ul>
             <div class="burgermenu"></div>
@@ -209,6 +209,7 @@
                         <dd><img src="photo/phone.svg" alt="電話番号"></dd>
                         <dt>090 - 3866 - 8049</dt>
                     </dl>
+                    <div class="formdiv"><a class="form_main" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a></div>
                     <div class="LINE">
                         <p>LINEでのお問い合わせも受け付けております。</p>
                         <p>下記のQRコードからお気軽にご連絡ください。</p>
