--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -22,7 +22,7 @@
                     <a href="/index.html">ホーム</a>
                 </li>
                 <li class="headmenu">
-                    <a href="#lesson">レッスン内容</a>
+                    <a href="#lesson">Lesson内容</a>
                 </li>
                 <li class="headmenu">
                     <a class="cantitle">他のクラス</a>
@@ -56,7 +56,7 @@
         <nav class="burger">
             <ul class="dropdown">
                 <li>
-                    <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">入塾申し込み</a>
+                    <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a>
                 </li>
             </ul>
             <div class="burgermenu"></div>
@@ -66,7 +66,7 @@
                         <a href="/index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
-                        <a href="#lesson">レッスン内容</a>
+                        <a href="#lesson">Lesson内容</a>
                     </li>
                     <li class="head-menu">
                         <a href="/shogaku/shogaku.html">小学生クラス</a>
@@ -97,7 +97,7 @@
             <h2 class="slogan">英語・英会話&#x2613;書道を通して<br><span>人間力</span>を育てる</h2>
         </div>
         <section class="lesson">
-            <h2 id="lesson">レッスン内容</h2>
+            <h2 id="lesson">Lesson内容</h2>
             <div>
                 <h3>○教育部(小学〜中学)</h3>
                 <p>1年回の検定試験と年1回の書道展に参加しています。年末にはカレンダー作り、夏は2年に1度うちわ作り、夏・冬休みの宿題、その他毛筆で色んな作品に挑戦してもらってます。硬筆では教養の1つである「四字熟語」「慣用句」で綺麗な字を書く練習と同時に知識も養っていきます。お稽古後は「漢字テスト」を行い、出来たら表にシールを貼りシールが増えるのを楽しんでもらってます。ポイントまできたら「お菓子か文房具」がご褒美です。</p>
@@ -124,6 +124,7 @@
                         <dd><img src="/photo/phone.svg" alt="電話番号"></dd>
                         <dt>090 - 3866 - 8049</dt>
                     </dl>
+                    <div class="formdiv"><a class="form_main" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a></div>
                     <div class="LINE">
                         <p>LINEでのお問い合わせも受け付けております。</p>
                         <p>下記のQRコードからお気軽にご連絡ください。</p>
@@ -155,7 +156,7 @@
                     <a href="/index.html">ホーム</a>
                 </li>
                 <li class="footmenu">
-                    <a href="#lesson">レッスン内容</a>
+                    <a href="#lesson">Lesson内容</a>
                 </li>
             </ul>
             <ul class="classnav">
