授業風景修正

--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -139,7 +139,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d821.4745461036027!2d135.4568391!3d34.5561332!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000db57cb64525f%3A0x76fdcc7bd9f8d6c4!2z44CSNTkyLTgzMzUg5aSn6Ziq5bqc5aC65biC6KW_5Yy65rWc5a-655-z5rSl55S65p2x77yT5LiB77yU4oiS77yR77yZ!5e0!3m2!1sja!2sjp!4v1661171573964!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div class="contact">
                         <dl class="adress">
-                            <dt>湊教室：大阪府堺市堺区出島町2-6-1　湊団地自治会館</dt>
+                            <dt>湊教室:大阪府堺市堺区出島町2-6-1 湊団地自治会館</dt>
                         </dl>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3262.6294382679985!2d135.45776509041963!3d34.57069790939999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000dcba5bfa8d8d%3A0x5bd4af2d70248968!2z44CSNTkwLTA4MzQg5aSn6Ziq5bqc5aC65biC5aC65Yy65Ye65bO255S677yS5LiB77yW4oiS77yRIO-8kQ!5e0!3m2!1sja!2sjp!4v1661319823078!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
