--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="/index.html#reputation">Lesson風景</a>
+                    <a href="#reputation">授業風景</a>
                 </li>
                 <li class="headmenu">
                     <a href="#achievement">資格</a>
@@ -75,7 +75,7 @@
                         <a href="/shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/index.html#reputation">Lesson風景</a>
+                        <a href="#reputation">授業風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
@@ -111,6 +111,10 @@
                 </p>
             </div>
         </section>
+        <section class="scenery">
+            <h2 id="reputation">授業風景</h2>
+            <img src="/photo/shogaku1.JPG" alt="lesson">
+        </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
             <div>
@@ -137,7 +141,7 @@
                         </a>
                     </div>
                     <dl class="adress">
-                        <dt>住所：大阪府堺市西区浜寺石津町東3-4-19</dt>
+                        <dt>住所:大阪府堺市西区浜寺石津町東3-4-19</dt>
                     </dl>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d821.4745461036027!2d135.4568391!3d34.5561332!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000db57cb64525f%3A0x76fdcc7bd9f8d6c4!2z44CSNTkyLTgzMzUg5aSn6Ziq5bqc5aC65biC6KW_5Yy65rWc5a-655-z5rSl55S65p2x77yT5LiB77yU4oiS77yR77yZ!5e0!3m2!1sja!2sjp!4v1661171573964!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
@@ -166,7 +170,7 @@
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="/index.html#reputation">Lesson風景</a>
+                    <a href="#reputation">授業風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
