資格の背景色追加

--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
             <h2 id="achievement">資格</h2>
             <div>
                 <h3>実用英語技能検定</h3>
-                <p>小学生から英検対策を行なっており、３級から追加される２次試験の面接対策まで対応しています。</p>
-                <p>教室が準会場指定になっていますので当教室で受験可能です。</p>
+                <p>小学生から英検対策を行なっており、３級から追加される２次試験の面接対策まで対応しています。教室が準会場指定になっていますので当教室で受験可能です。</p>
             </div>
             <div>
                 <h3>全国書道検定試験</h3>
