留学欄修正

--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@
                         <p>代表 久野浩司</p>
                     </div>
                 </div>
+                <div class="abroad-iphone">
+                    <div>
+                        <p>○留学Office LAU(ニュージーランド)<br>代表 勝彰子</p>
+                        <p>○ワイエー留学 (オーストラリア)<br>代表 渥味涼子</p>
+                        <p>○グローバル・クリエイティヴ・カナダ<br>代表 久野浩司</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section>
